--- a/less/custom/custom-other.less
+++ b/less/custom/custom-other.less
@@ -19,3 +19,10 @@ html,body {
 #jumbo-wb {
     background: rgba(0,0,0, 0.5);
 }
+
+.vertical-center {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
+    display: flex;
+    align-items: center;
+}
