--- a/less/custom/custom-variables.less
+++ b/less/custom/custom-variables.less
@@ -42,8 +42,8 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  'PT Sans', sans-serif;;
-@font-family-serif:       'PT Serif', serif;
+@font-family-sans-serif:  'Ubuntu', sans-serif;;
+@font-family-serif:       'Ubuntu', serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
