--- a/less/custom/custom-variables.less
+++ b/less/custom/custom-variables.less
@@ -42,7 +42,7 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  'Ubuntu', sans-serif;;
+@font-family-sans-serif:  'Roboto','Ubuntu', sans-serif;;
 @font-family-serif:       'Roboto Condensed', serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
