--- a/less/custom/custom-other.less
+++ b/less/custom/custom-other.less
@@ -26,3 +26,26 @@ html,body {
     display: flex;
     align-items: center;
 }
+.navbar-top {
+    min-height: 99px !important;
+}
+.navbar {
+    -moz-transition: all 1s ease;
+    -webkit-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+}
+#skills {
+    background: #333;
+}
+
+#skills {
+    /* #skills section styles */
+    min-height: 100%;
+    h2 {
+        color: white;
+    }
+}
+section {
+    padding-bottom: 8em;
+}
