--- a/less/custom/custom-variables.less
+++ b/less/custom/custom-variables.less
@@ -14,7 +14,7 @@
 @gray-light:             #828287; // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #5BC0BE;
+@brand-primary:         #ff2a63; //old one #5BC0BE;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
