--- a/less/custom/custom-bootstrap.css
+++ b/less/custom/custom-bootstrap.css
@@ -6731,6 +6731,16 @@ section {
   background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
+/* XS - mobile tweaks */
+@media (max-width: 480px) {
+  h1 {
+    font-size: 43px;
+  }
+  h2 {
+    font-size: 35px;
+    text-align: center;
+  }
+}
 .clearfix:before,
 .clearfix:after,
 .dl-horizontal dd:before,
