--- a/less/custom/custom-bootstrap.css
+++ b/less/custom/custom-bootstrap.css
@@ -4497,8 +4497,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #555;
-  background-color: #121212;
+  color: #828287;
+  background-color: transparent;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
@@ -4523,8 +4523,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  background-color: #121212;
-  color: #555;
+  background-color: transparent;
+  color: #828287;
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
@@ -4538,8 +4538,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #555;
-    background-color: #121212;
+    color: #828287;
+    background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
@@ -6672,11 +6672,12 @@ h3.date {
   position: relative;
 }
 .navbar-fixed-top {
-  opacity: 0.5;
-  filter: alpha(opacity=50);
+  opacity: 0.9;
+  filter: alpha(opacity=90);
   /* For IE8 and earlier */
   min-height: 69px;
   padding: 15px 0;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .navbar-fixed-top > .active > a {
   background-color: #ff0000 !important;
@@ -6698,6 +6699,7 @@ h3.date {
   opacity: 0.9;
   filter: alpha(opacity=90);
   /* For IE8 and earlier */
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .navbar {
   -moz-transition: all 1s ease;
@@ -6705,6 +6707,10 @@ h3.date {
   -o-transition: all 1s ease;
   transition: all 1s ease;
 }
+.active a {
+  background: transparent;
+}
+/* Skills */
 #skills {
   background: #333;
 }
@@ -6720,6 +6726,44 @@ section {
 }
 #jumbo-wb h1 {
   margin: 0.1em 0;
+}
+/* Timeline styles */
+.timelineContainer {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.timelineContainer > h2,
+.timelineContainer h3,
+.timelineContainer h4,
+.timelineContainer h5,
+.timelineContainer h6 {
+  margin-top: 0;
+}
+.timeline::after {
+  /* Timeline Circle */
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateX(-34px);
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #666;
+}
+.timeline::before {
+  /* this is the vertical line */
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -30px;
+  height: 100%;
+  width: 4px;
+  background: #eee;
+}
+.timeline {
+  padding-bottom: 40px;
 }
 /* Custom progress-bar */
 .progress-bar-custom {
