--- a/less/custom/custom-other.less
+++ b/less/custom/custom-other.less
@@ -31,10 +31,11 @@ h3.date {
     position: relative;
 }
 .navbar-fixed-top {
-    opacity: 0.5;
-    filter: alpha(opacity=50); /* For IE8 and earlier */
+    opacity: 0.9;
+    filter: alpha(opacity=90); /* For IE8 and earlier */
     min-height: 69px;
     padding: 15px 0;
+    background-color: rgba(0,0,0,0.2);
 }
 .navbar-fixed-top > .active > a {
     background-color: #ff0000 !important;
@@ -56,6 +57,7 @@ h3.date {
     padding: 0 0;
     opacity: 0.9;
     filter: alpha(opacity=90); /* For IE8 and earlier */
+    background-color: rgba(0,0,0,0.8);
 }
 
 .navbar {
@@ -64,6 +66,11 @@ h3.date {
     -o-transition: all 1s ease;
     transition: all 1s ease;
 }
+.active a {
+    background: transparent;
+}
+
+/* Skills */
 #skills {
     background: #333;
 }
@@ -82,6 +89,44 @@ section {
     margin: 0.1em 0;
 }
 
+
+/* Timeline styles */
+
+.timelineContainer {
+   > h2,h3,h4,h5,h6 {
+       margin-top: 0; 
+    }
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.timeline::after {
+    /* Timeline Circle */
+    content: '';    
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: translateX(-34px);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #666;
+}
+
+.timeline::before {
+  /* this is the vertical line */
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -30px;
+  height: 100%;
+  width: 4px;
+  background: #eee;
+}
+.timeline {
+    padding-bottom: 40px;
+}
 
 /* Custom progress-bar */
 
