--- a/less/custom/custom-variables.less
+++ b/less/custom/custom-variables.less
@@ -371,11 +371,11 @@
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #f8f8f8;
+@navbar-default-link-color:                @navbar-default-color;
 @navbar-default-link-hover-color:          #ccc;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #555;
-@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-link-active-color:         @gray-light;
+@navbar-default-link-active-bg:            transparent;
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
 
