--- a/less/custom/custom-other.less
+++ b/less/custom/custom-other.less
@@ -20,6 +20,9 @@ h6, .h6 {
 h3.date {
     color: @gray-custom;
 }
+.white {
+    color: #fff;
+}
 
 #header-wb {
     background: url('../../img/svg.jpg') 50% 0px no-repeat;
@@ -78,17 +81,22 @@ h3.date {
 #skills {
     /* #skills section styles */
     min-height: 100%;
-    h2 {
-        color: white;
-    }
 }
 section {
-    padding-bottom: 8em;
+    padding-bottom: 30px;
 }
 #jumbo-wb h1 {
     margin: 0.1em 0;
 }
 
+/* Certificaions */
+
+#certs {
+    background: url('../../img/svg2.jpg') 50% 0px no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
 
 /* Timeline styles */
 
