--- a/less/custom/custom-other.less
+++ b/less/custom/custom-other.less
@@ -82,20 +82,35 @@ h3.date {
     /* #skills section styles */
     min-height: 100%;
 }
+
+
+
 section {
     padding-bottom: 30px;
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 #jumbo-wb h1 {
     margin: 0.1em 0;
 }
 
-/* Certificaions */
+/* Certificaions Section */
 
 #certs {
-    background: url('../../img/svg2.jpg') 50% 0px no-repeat;
+    h5 {
+        color: white;
+    }
+    background: url('../../img/svg3.jpg') 50% 0px no-repeat;
     background-size: cover;
     background-attachment: fixed;
     position: relative;
+}
+
+/* Contact Section */
+
+#contact {
+    padding: 0;
 }
 
 /* Timeline styles */
@@ -119,7 +134,7 @@ section {
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background: #666;
+    background: #ff2a63;
 }
 
 .timeline::before {
