--- a/less/custom/custom-variables.less
+++ b/less/custom/custom-variables.less
@@ -368,7 +368,7 @@
 
 @navbar-default-color:             #f8f8f8;
 @navbar-default-bg:                @gray-darker;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-border:            rgba(0,0,0,0.4);
 
 // Navbar links
 @navbar-default-link-color:                @navbar-default-color;
