--- a/less/custom/custom-other.less
+++ b/less/custom/custom-other.less
@@ -46,7 +46,7 @@ ul li {
     -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    position: relative;
+    position: relative;    
 }
 
 /* Sticked menu at the top*/
@@ -195,6 +195,9 @@ section {
     h2 { 
         font-size: floor((@font-size-h2 / 1.6)); 
         text-align: center;
+    }
+    #header-wb, #certs {
+        background-attachment: scroll;
     }
     
 }
